# Dissertation-Engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
Dia/: EngineDesign1.dia  EngineDesign2.dia  EngineDesign2.dia~  EngineDesign3.dia.autosave  EngineDesign3.dia~  EngineDesign4.dia
Documentation/html/: struct_noble_engine_1_1_shader_location.html  struct_noble_engine_1_1_u_i_element.html
MISC/Dia/: EngineDesign2.dia  EngineDesign2.dia~  EngineDesign3.dia
MISC/doxygen/html/: _application_8h_source.html  _audio_clip_8h_source.html  _camera_system_8h_source.html  _component_8h_source.html  _engine_core_8h_source.html  _entity_8h_source.html  _input_manager_8h_source.html  _mesh_renderer_8h_source.html  _mesh_renderer_system_8h_source.html  _screen_8h_source.html  _system_8h_source.html  _transform_8h_source.html  _transform_system_8h_source.html  annotated.html  class_input_manager-members.html  class_input_manager.html  class_noble_engine_1_1_application-members.html  class_noble_engine_1_1_application.html  classes.html  dir_4df951cf01c2f435a965d8595ea4c3a6.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  menudata.js  struct_noble_engine_1_1_audio_clip-members.html  struct_noble_engine_1_1_audio_clip.html  struct_noble_engine_1_1_camera_system-members.html  struct_noble_engine_1_1_camera_system.html  struct_noble_engine_1_1_component-members.html  struct_noble_engine_1_1_component.html  struct_noble_engine_1_1_component_base-members.html  struct_noble_engine_1_1_component_base.html  struct_noble_engine_1_1_entity-members.html  struct_noble_engine_1_1_entity.html  struct_noble_engine_1_1_mesh_renderer-members.html  struct_noble_engine_1_1_mesh_renderer.html  (+12 more)
MISC/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  (+42 more)
MISC/doxygen/latex/: annotated.tex  class_input_manager.tex  class_noble_engine_1_1_application.tex  hierarchy.tex  refman.tex  struct_noble_engine_1_1_audio_clip.eps  struct_noble_engine_1_1_audio_clip.tex  struct_noble_engine_1_1_camera.eps  struct_noble_engine_1_1_camera.tex  struct_noble_engine_1_1_camera_system.eps  struct_noble_engine_1_1_camera_system.tex  struct_noble_engine_1_1_component.eps  struct_noble_engine_1_1_component.tex  struct_noble_engine_1_1_component_base.eps  struct_noble_engine_1_1_component_base.tex  struct_noble_engine_1_1_entity.tex  struct_noble_engine_1_1_material.tex  struct_noble_engine_1_1_mesh_renderer.eps  struct_noble_engine_1_1_mesh_renderer.tex  struct_noble_engine_1_1_mesh_renderer_system.eps  struct_noble_engine_1_1_mesh_renderer_system.tex  struct_noble_engine_1_1_model.eps  struct_noble_engine_1_1_model.tex  struct_noble_engine_1_1_resource.eps  struct_noble_engine_1_1_resource.tex  struct_noble_engine_1_1_resource_manager.tex  struct_noble_engine_1_1_screen.tex  struct_noble_engine_1_1_shader.eps  struct_noble_engine_1_1_shader.tex  struct_noble_engine_1_1_shader_program.tex  struct_noble_engine_1_1_system.eps  struct_noble_engine_1_1_system.tex  struct_noble_engine_1_1_system_base.eps  struct_noble_engine_1_1_system_base.tex  struct_noble_engine_1_1_texture.eps  struct_noble_engine_1_1_texture.tex  struct_noble_engine_1_1_transform.eps  struct_noble_engine_1_1_transform.tex  struct_noble_engine_1_1_transform_system.eps  struct_noble_engine_1_1_transform_system.tex
Resources/: standard.vs
Resources/Shaders/: standard.fs  standard.vs  textStandard.vs
ibuild/: CMakeCache.txt  Makefile  cmake_install.cmake
src/NobleEngine/: Application.cpp  Application.h  AudioClip.cpp  AudioClip.h  AudioListener.h  AudioListenerSystem.cpp  AudioListenerSystem.h  AudioSource.h  AudioSourceSystem.cpp  AudioSourceSystem.h  Camera.h  CameraSystem.cpp  CameraSystem.h  Component.h  EngineCore.h  Entity.cpp  Entity.h  InputManager.cpp  InputManager.h  Material.h  MeshRenderer.h  MeshRendererSystem.cpp  MeshRendererSystem.h  Model.h  PhysicsBody.h  PhysicsBodySystem.h  PhysicsWorld.cpp  PhysicsWorld.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Screen.cpp  Screen.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  System.h  Texture.h  Transform.h  TransformSystem.cpp  (+1 more)
src/NobleEngine/Components/: AudioListener.h  AudioSource.h  Camera.h  Light.h  MeshRenderer.h  PhysicsBody.h  SpriteRenderer.h  Transform.h
src/NobleEngine/EngineCore/: Application.cpp  Application.h  Component.h  Entity.cpp  Entity.h  InputManager.cpp  InputManager.h  PerformanceStats.cpp  PerformanceStats.h  PhysicsWorld.cpp  PhysicsWorld.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  System.h  ThreadingManager.cpp  ThreadingManager.h  UI.cpp  UI.h
src/NobleEngine/ResourceManagement/: AudioClip.h  Font.cpp  Font.h  Material.h  Model.cpp  Model.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h
src/NobleEngine/Systems/: AudioListenerSystem.h  AudioSourceSystem.cpp  AudioSourceSystem.h  CameraSystem.cpp  CameraSystem.h  LightSystem.cpp  LightSystem.h  MeshRendererSystem.cpp  MeshRendererSystem.h  PhysicsBodySystem.cpp  PhysicsBodySystem.h  SpriteRendererSystem.cpp  SpriteRendererSystem.h  TransformSystem.cpp  TransformSystem.h
src/NobleEngineOld/Components/: MeshRenderer.h
src/NobleEngineOld/EngineCore/: Component.h  InputManager.h  PhysicsWorld.cpp  PhysicsWorld.h  Screen.cpp
src/NobleEngineOld/ResourceManagement/: AudioClip.cpp  Texture.h
src/TechDemo/: Deleter.h  DeleterSystem.cpp  DeleterSystem.h  FlyingCam.h  FlyingCamSystem.cpp  Spawner.h  SpawnerSystem.cpp  SpawnerSystem.h  TechDemoUI.cpp  TechDemoUI.h  main.cpp
src/TestProgram/: FlyingCam.h  FlyingCamSystem.cpp  FlyingCamSystem.h  Rotator.h  RotatorSystem.cpp  RotatorSystem.h  TestUI.cpp  TestUI.h  main.cpp
test/ttests/: ttests.sln
test/ttests/ttests/: main.cpp
(+19 files in other folders)
